  CHANGED: mountman gui: current selection persists refresh of mountlist,
           mountlist is focused after refresh
  CHANGED: dont't execute a process if the correct working dir cannot be set
  CHANGED: dont't retrieve working dir of the cmdline from the label which might get truncated
           - store it in a string instead

    FIXED: commands entered via command line are mixed up with history
    FIXED: [ 2790819, 2892768, 2915192 ] Can't resize columns properly
    FIXED: disk usage dialog layout problem
    FIXED: [ 2907607 ] crash while closing
    FIXED: if a panel is focused by clicking on the header, the colors/actions are not updated
    FIXED: mountman: unmounting is not possible if currently opened dir is below the mountpoint
    FIXED: [ 2860400 ] Drag'n'drop to kmail broken
    FIXED: [ 2904850 ] panels are not repainted
    FIXED: deadlock when trying to display error message after failed mount
    FIXED: [ 2858133 ] wrong background color in listviews

2.1.0-beta1 "Rusty Clutch"
==========================

    ADDED: file regex in quick search, thanks to GregC
    ADDED: lister: a fast text/hex viewer for Krusader
    ADDED: service menu, thanks to Tomasz Kalkosinski
    ADDED: queued packing / unpacking
    ADDED: lock tabs, close inactive tabs, close duplicated tabs
    ADDED: better trash integration

  CHANGED: the packer/unpacker/archive tester are job based now
  CHANGED: the old views were replaced by the interviews

    FIXED: [ 2857663 ] deadlock when trying to display error message after failed unmount
    FIXED: problem with autorefresh in the new interviews
    FIXED: [ 2609505 ] problem with directory refresh
    FIXED: [ 2793916 ] KHistoryComboBox content can change the window width
    FIXED: [ 2805624 ] ctrl-left/right arrow with locked tabs on the other panel
    FIXED: panels sometimes lose focus
    FIXED: directory compare modes don't work
    FIXED: [ 2609483 ] unpacking to directories with international characters
