@@ -25,6 +25,11 @@
   CHANGED: dont't retrieve working dir of the cmdline from the label which might get truncated
            - store it in a string instead
 
+    FIXED: useraction commands, or those entered in the embedded cmdline, are sometimes not executed
+           in the correct working dir
+    FIXED: when multiple commands are entered in the embedded cmdline or a useraction,
+           and execution mode is set to terminal, only the first command is executed in a new terminal
+           and the others in the same terminal (if any) as krusader
     FIXED: commands entered via command line are mixed up with history
     FIXED: [ 2790819, 2892768, 2915192 ] Can't resize columns properly
     FIXED: disk usage dialog layout problem
